public/css/main.css
/**
* green: rgb(22, 193, 100);
* red: rgb(235, 44, 55);
* light-grey: #a2a2a2;
* regular grey: #333;
*/
@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@400;500&display=swap');

@font-face {
  font-family: "Cerebri Sans";
  src: url(../fonts/Cerebri-Sans/CerebriSans-Light.eot);
  src: url(../fonts/Cerebri-Sans/CerebriSans-Light.ttf);
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Cerebri Sans";
  src: url(../fonts/Cerebri-Sans/CerebriSans-Regular.eot);
  src: url(../fonts/Cerebri-Sans/CerebriSans-Regular.ttf);
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Cerebri Sans";
  src: url(../fonts/Cerebri-Sans/CerebriSans-Bold.eot);
  src: url(../fonts/Cerebri-Sans/CerebriSans-Bold.ttf);
  font-weight: 700;
  font-style: normal;
}

html {
  scroll-behavior: smooth;
  width: 100%;
  max-width: 100%;
  font-weight:400;
  font-size: 90%;
}

body {
	color: #0e0d0d;
  background-color: #fff;
	font-size: 1rem;
  font-family: 'Cerebri Sans', 'Helvetica Neue', 'Roboto', sans-serif;
  line-height: 1.6;
}

* {
  -webkit-text-size-adjust:100%;
  -webkit-font-smoothing:antialiased;
  -moz-osx-font-smoothing:grayscale;
  text-rendering:optimizeLegibility;
  font-family: 'Cerebri Sans', 'Helvetica Neue', 'Roboto', sans-serif;
  color: rgb(14, 13, 13);
  line-height: 1.58;
}

div > h1:first-child { margin-top: 0; }

.container {
  padding: 2em 0 0 2em;
  float: left;
}

.container-b {
  padding: 0em 2em 0 2em;
}

p, a, li {
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.58;
}
h1,h2,h3 { color: #000; font-weight: 600; font-family: 'Helvetica Neue', 'Roboto', 'Lato', sans-serif; }
h1 { font-size: 3em; }
h4 {
  font-size: 1rem !important;
  margin: 0;
  color: rgb(235, 44, 55);
}
h5, h6 { margin: 0; }
h5 {
  font-weight: 300;
  letter-spacing: .03rem;
  line-height: 1.55;
}
h6 {
  font-weight: 400;
  line-height: 1.6;
  letter-spacing: .03rem;
  color: #47525c;
}
h1.serif, h2.serif, h3.serif, h4.serif, h5.serif, h6.serif {
  font-family: 'Cormorant', serif;
  line-height: 1.2;
}
a { color: #a2a2a2; text-decoration: none; }
a:hover { color: rgb(235, 44, 55) !important; }
a:focus { color: rgb(235, 44, 55) !important; }
a:visited { color: #a2a2a2; }
a.unstyled { font-size: 1rem; }
ol { counter-reset: a; padding-left: 18px; }
ul, ol { list-style: none; padding-left: 0; }
ol > li:not(.surpress-numbering) { position: relative; padding-left: 25px; }
ol > li:not(.surpress-numbering)::before {
    content: counter(a,decimal-leading-zero) "."; 
    width: 25px; 
    color: rgb(235, 44, 55); 
    counter-increment: a;
    font-size: .777777em;
    position: absolute;
    left: 0;
    margin-top: .2em;
}
ul.spaced > li {
	margin-bottom: 1em;
}
ul.spaced-m > li {
  margin-bottom: 0.5em;
}
li.active > a {
  color: #0e0e0e;
  font-weight: 400;
}

.navigation {
  margin-top: 2em;
}
.navigation ul.nav {
  float: right;
  margin-top: 1.5em;
}
ul.nav a { font-size: 1.2rem; }
ul.nav li {
  margin: 0 3em 0 0;
  float: left;
}

ul.social li {
  float: left;
  margin: 0;
}

.float-right {
  float: right;
}

hr {
  opacity: .3;
  margin-bottom: 1.85rem;
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}
.uppercase { text-transform: uppercase; }
.headline h1, h2, h3, h4 {
  margin: 0;
}
.headline .subtitle { font-size: 1em }
.subtitle { font-size: .6em }
img.icon {
  margin-top: -.25rem;
  margin-right: .5rem;
  vertical-align: middle;
  opacity: .5;
  -webkit-transition: all .2s;
  -moz-transition: all .2s;
  -ms-transition: all .2s;
  -o-transition: all .2s;
  transition: all .2s;
}
img.icon:hover {
  opacity: 1;
}
.image { max-width: 100%; }
.header-image {
  max-width: 1em;
  height: auto;
  vertical-align: middle;
  margin: -.2em .5em 0 0;
}
hr { border-top: .2px solid #e8e8e8; }
.header {
  margin-bottom: 3.5em;
}
.logo > img {
  width: 60px;
  -webkit-transition: 550ms;
  transition: 550ms;
  opacity: 60%;
}
.logo > img:hover {
  opacity: 100%;
}
footer { padding: 4em 0 4em 0; }
.text-center { text-align: center; }
.center {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
}


::selection {
    background: #0e0e0e;
    color: #fff;
    text-shadow: 0 0 0 transparent;
}

.intro > p {
	font-size: 2em;
	font-weight: 100;
	line-height: 1.3;
}

.sidebar-footer {
  position: absolute;
  bottom: 4em;
  left: 1em;
}

.button {
  text-transform: uppercase;
  background-color: #0e0e0e;
  color: #fff;
  padding: .2em 1.5em;
  border: 0;
  opacity: 1;
  transition: 0.3s;
}
.button:hover {
  opacity: 0.6;
  cursor: pointer;
}

.text-inline { display: inline-block; }

.breadcrumbs span.breadcrumb {
  background: rgb(170, 170, 160);
  background: linear-gradient(90deg, #EB2C37, blue);
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  vertical-align: sub;
  transition: all .2s ease-in-out;
  margin-right: 1em;
}


.p6 { width: 60%; }
.p7 { width: 70%; }
.p8 { width: 80%; }
.p9 { width: 90%; }

.ext:after {
  content: "↗︎";
  font-size: .7em;
  display: inline-block;
}



.mobile { display: none; }
@media (max-width: 1024px) {

  body {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    width: 100%;
  }

  .navigation {
    max-width: 100%;
    width: 100%;
    margin: 0;
    padding: 0 !important;
    min-height: unset;
    position: relative;
    border: none;
  }
  .container {
    width: 100%;
    max-width: 100%;
    padding: 0;
    margin: 0;
  }
  .container.main {
    margin: 0 auto;
    padding: 0;
    width: 90%;
  }

  .intro > p { font-size: 1.7em; }

  .desktop-only {
    display: none;
  }

  .mobile { display: block; }

  .mobile-nav-button {
    float: right;
    margin-right: 3em;
    position: relative;
  }

  .mobile-nav-button input {
    opacity: 0;
  }

  .mobile-nav-button input + label {
    position: absolute;
    top: 0;
    right: 0;
    height: 20px;
    width: 20px;
    z-index: 5;
  }

  .mobile-nav-button input + label span {
    position: absolute;
    width: 100%;
    height: 2px;
    top: 50%;
    margin-top: -1px;
    left: 0;
    display: block;
    background: #020304;
    transition: .5s;
  }
  .mobile-nav-button input + label span:first-child {
    top: 3px;
  }
  .mobile-nav-button input + label span:last-child {
    top: 17px;
  }
  .mobile-nav-button label:hover {
    cursor: pointer;
  }
  .mobile-nav-button input:checked + label span {
    opacity: 0;
    top: 50%;
  }
  .mobile-nav-button input:checked + label span:first-child {
    opacity: 1;
    transform: rotate(405deg);
  }
  .mobile-nav-button input:checked + label span:last-child {
    opacity: 1;
    transform: rotate(-405deg);
  }

  .header {
    padding: 2em 0 2em 1.5em;
    margin-bottom: 0em;
  }

  .row [class^="col"] {
    margin: 0;
    width: 100%;
  }

  ul.nav {
    display: block;
    width: 100%;
    background-color: #a2a2a2;
    text-align: center;

    max-height: 0;
    opacity: 0;
    overflow: hidden;
    transition: max-height 0.9s ease 0s;
  }
  ul.nav li {
    padding: 1em 2em;
  }
  ul.nav li a {
    color: #fff;
    font-weight: 400;
  }

  .p6 { width: unset; }
  .p7 { width: unset; }
  .p8 { width: unset; }
  .p9 { width: unset; }

}


/* Code */
pre {
  margin-top: 0;
  margin-bottom: 0;
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

code,
kbd,
pre {
  font-family: monospace,monospace;
  font-size: 1em;
}

code,
pre {
  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
  font-size: 12px;
}

code {
  padding: .2em .4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,.05);
  border-radius: 3px;
}

pre>code {
  padding: 0;
  margin: 0;
  font-size: 100%;
  word-break: normal;
  white-space: pre;
  background: transparent;
  border: 0;
}

pre code {
  display: inline;
  max-width: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
  background-color: initial;
  border: 0;
}

/* Animations */
.scroller {
  height: 1em;
  width: 80px;
  overflow: hidden;
  position: relative;
}
.scroller h6 {
  font-size: 0.8em;
  line-height: 1.9;
  white-space: nowrap;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  text-align: center;
  /* Starting position */
  -moz-transform:translateX(100%);
  -webkit-transform:translateX(100%);
  transform:translateX(100%);
  /* Apply animation to this element */
  -moz-animation: scroller 12s linear infinite;
  -webkit-animation: scroller 12s linear infinite;
  animation: scroller 12s linear infinite;
}
/* Move it (define the animation) */
@-moz-keyframes scroller {
  0%   { -moz-transform: translateX(100%); }
  100% { -moz-transform: translateX(-100%); }
}
@-webkit-keyframes scroller {
  0%   { -webkit-transform: translateX(100%); }
  100% { -webkit-transform: translateX(-100%); }
}
@keyframes scroller {
  0%   {
    -moz-transform: translateX(100%); /* Firefox bug fix */
    -webkit-transform: translateX(100%); /* Firefox bug fix */
    transform: translateX(100%);
  }
  100% {
    -moz-transform: translateX(-100%); /* Firefox bug fix */
    -webkit-transform: translateX(-100%); /* Firefox bug fix */
    transform: translateX(-100%);
  }
}

